[gd_scene load_steps=20 format=3 uid="uid://lu5ys2u8fw60"]

[ext_resource type="Script" uid="uid://dgqaj5irxi78b" path="res://scripts/tela_titulo.gd" id="1_bp1iq"]
[ext_resource type="Script" uid="uid://bemxb877oehdb" path="res://recursos/card_data.gd" id="2_663uq"]
[ext_resource type="Texture2D" uid="uid://d0p64wdujl81u" path="res://sprites/IMG_1945.PNG" id="2_wys1u"]
[ext_resource type="AudioStream" uid="uid://cq7dfdjelgq66" path="res://audio/SFX/Loop Restaurante.wav" id="3_b8sri"]
[ext_resource type="Resource" uid="uid://cy45h8bh2tk3y" path="res://Cartas/CarneDragao.tres" id="5_mopl6"]
[ext_resource type="Resource" uid="uid://rolcnsltf6x7" path="res://Cartas/CogumeloMurmurante.tres" id="6_ywseg"]
[ext_resource type="Resource" uid="uid://d3qcwraht7lw6" path="res://Cartas/CouveAfiada.tres" id="7_koial"]
[ext_resource type="Resource" uid="uid://5yp4p727e341" path="res://Cartas/Foguito.tres" id="8_oc6wf"]
[ext_resource type="Resource" uid="uid://davivv61mw4ju" path="res://Cartas/LeiteMeteoro.tres" id="10_wfqyo"]
[ext_resource type="Resource" uid="uid://bpturhuwta3pk" path="res://Cartas/Arroz.tres" id="12_0nxg4"]
[ext_resource type="Resource" uid="uid://pq8u1hoapxwd" path="res://Cartas/BatataNormal.tres" id="13_04wef"]
[ext_resource type="Resource" uid="uid://cd760bxg0h26d" path="res://Cartas/CuboMaionese.tres" id="14_mj6mt"]
[ext_resource type="Resource" uid="uid://cxnxgci4n72vq" path="res://Cartas/Pao.tres" id="14_sj1xo"]
[ext_resource type="Resource" uid="uid://dogshbarq7kre" path="res://Cartas/Amendoranha.tres" id="15_48afa"]
[ext_resource type="Resource" uid="uid://b2m5r8ci233b8" path="res://Cartas/Peixe-Martelete.tres" id="16_kiu78"]
[ext_resource type="Resource" uid="uid://dttv4mvwr0ddf" path="res://Cartas/Slime.tres" id="20_bdnts"]
[ext_resource type="Resource" uid="uid://dl7exv81i0d60" path="res://Cartas/Faca.tres" id="23_d3e21"]
[ext_resource type="Resource" uid="uid://dcxscjhhol13y" path="res://Cartas/Fogo.tres" id="24_bx4ur"]
[ext_resource type="Resource" uid="uid://dsro6eg4abb33" path="res://Cartas/Martelo.tres" id="25_dw1xu"]

[node name="TelaTitulo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bp1iq")
lista_cartas = Array[ExtResource("2_663uq")]([ExtResource("5_mopl6"), ExtResource("6_ywseg"), ExtResource("7_koial"), ExtResource("8_oc6wf"), ExtResource("15_48afa"), ExtResource("10_wfqyo"), ExtResource("14_sj1xo"), ExtResource("16_kiu78"), ExtResource("20_bdnts"), ExtResource("12_0nxg4"), ExtResource("13_04wef"), ExtResource("14_mj6mt"), ExtResource("25_dw1xu"), ExtResource("24_bx4ur"), ExtResource("23_d3e21")])
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wys1u")
expand_mode = 1

[node name="MarginContainerContent" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 83.0
offset_top = -79.0
offset_right = 202.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="MarginContainerContent"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainerContent"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainerContent/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainerContent/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BotaoIniciar" type="Button" parent="MarginContainerContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Pular Dia 1"

[node name="BotaoCutscene" type="Button" parent="MarginContainerContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Jogar"
script = ExtResource("1_bp1iq")

[node name="BotaoConfig" type="Button" parent="MarginContainerContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Configurações"

[node name="BotaoCreditos" type="Button" parent="MarginContainerContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Créditos"

[node name="BotaoSair" type="Button" parent="MarginContainerContent/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Sair"

[node name="SFXBackground" type="AudioStreamPlayer2D" parent="."]
position = Vector2(582, 288)
stream = ExtResource("3_b8sri")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MarginContainerContent/HBoxContainer/VBoxContainer/BotaoIniciar" to="." method="_on_botao_iniciar_pressed"]
[connection signal="pressed" from="MarginContainerContent/HBoxContainer/VBoxContainer/BotaoCutscene" to="." method="_on_botao_cutscene_pressed"]
[connection signal="pressed" from="MarginContainerContent/HBoxContainer/VBoxContainer/BotaoConfig" to="." method="_on_botao_config_pressed"]
[connection signal="pressed" from="MarginContainerContent/HBoxContainer/VBoxContainer/BotaoCreditos" to="." method="_on_botao_creditos_pressed"]
[connection signal="pressed" from="MarginContainerContent/HBoxContainer/VBoxContainer/BotaoSair" to="." method="_on_botao_sair_pressed"]
